--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,17 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.0.4.RELEASE'
 }
 
 apply plugin: 'application'
-apply plugin: 'io.spring.dependency-management'
+
+jar {
+    manifest {
+        attributes 'Main-Class' : 'com.er.Application'
+    }
+}
 
 group 'com.er'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 mainClassName = 'com.er.Application'
 
@@ -18,7 +22,5 @@ repositories {
 }
 
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-web'
-
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
